# prism

./: README.md  foundry.toml  pyproject.toml
ETH_strategies/: remappings.txt
benchmark/: audit-log.md  benchmark-event.schema.json  classification-guide.md
cache/: solidity-files-cache.json
corpus/: categories.md  protocol-metadata.schema.json  selection-rubric.md
ir-schema/: mechanism-graph.schema.json  meta-ir.schema.json  seed-tags.md  sidecar-metrics.schema.json
prism.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: preflight.py  run_evaluation.py
tests/: conftest.py  test_ast_external_state_reader.py  test_ast_missing_require.py  test_ast_share_asset_pricing.py  test_benchmark_schema.py  test_etherscan.py  test_ir_schema.py  test_m0_gate.py  test_protocol_schema.py  test_sidecar_metrics_schema.py  test_stage1_criterion_a.py  test_stage1_criterion_b.py  test_stage1_criterion_c.py  test_stage1_db_writer.py  test_stage1_flagger.py  test_stage1_llm.py  test_stage1_pass1_consensus.py  test_stage1_pass1_discovery.py  test_stage1_pass1_stub.py  test_stage1_pass2_extractor.py  test_stage1_poc_generator.py  test_stage1_poc_sanity.py  test_stage1_prepare.py  test_stage1_report.py  test_stage2_cli.py  test_stage2_edges.py  test_stage2_graph.py  test_stage2_graph_schema.py  test_stage2_loader.py  test_stage2_normalize.py  test_stage2_reconstruction.py  test_stage2_resources.py  test_stage2_scale.py  test_tag_coverage.py
tools/: etherscan.py  m0_gate.py  tag_coverage.py  validate_benchmark.py  validate_ir.py  validate_protocol.py
(+167 files in other folders)
