[project]
name = "prism"
version = "0.0.1"
description = "PRISM: Cross-Protocol Reconnaissance and Interaction Strategy Mining"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.21.0",
    "anthropic>=0.40.0",
    "slither-analyzer>=0.10.0",
    "requests>=2.32.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "responses>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tools*", "pipeline*"]
